--- a/Resources/i18n/he.json
+++ b/Resources/i18n/he.json
@@ -1,142 +1,143 @@
 {
-	"main":{
-		"skinList":"רשימת דמויות",
-		"addSkin":"הוסף דמות",
-		"editSettings":"ערוך הגדרות",
-		"skinDetails":{
-			"title":"פרטי דמויות",
-			"description":"תיאור",
-			"creation":"תאריך יצירה",
-			"wear":"לבש את הדמות הזאת",
-			"close":"סגור"
-		},
-		"noSelectedSkin":"אין דמות שנבחרה.",
-		"search":"חפש בדמויות שלך...",
-		"tips":{
-			"wear":"טיפ: כדי ללבוש דמות, לחץ לחיצה ארוכה על הסמל שלו!"
-		},
-		"skinDelete":{
-			"title":"אשר מחיקה",
-			"message":"האם אתה באמת רוצה למחוק את ״%s\"?",
-			"cancel":"לאאאאאאאא!",
-			"okay":"בטח!"
-		},
-		"progressBar":{
-			"login":"מתחבר...",
-			"upload":"מעלה דמות...",
-			"loginFail":"התחברות נכשלה",
-			"uploadFail":"העלאה נכשלה",
-			"challengeFail":"אתגר נכשל",
-			"success":"העלאה הושלמה!"
-		},
-		"skinUpload":{
-			"confirm":{
-				"title":"החלף דמות?",
-				"message":"האם את\/ה באמת רוצה להחליף את הדמות עם \"%s\"?",
-				"cancel":"לא",
-				"okay":"כן"
-			},
-			"error":{
-				"title":"שגיאה בהעלאה",
-				"login":"אין אפשרות להתחבר לminecraft.net. בבקשה תבדוק את פרטי ההתחברות שלך בהגדרות.",
-				"server":"אין אפשרות להתחבר ל-minecraft.net. האתר אולי נפל. בדוק ב http:\/\/help.mojang.com ונסה מאוחר יותר.",
-				"upload":"אין אפשרות להעלות את הדמות ל- minecraft.netז בבקשה נסה מאוחר יותר.",
-				"challenge":"את\/ה נדרש לענות על שאלת אבטחה כדי לגשת לחשבונך מהמכשיר הזה.\nלמרבה הצער, אנחנו לא יכולים לטעון את זה. בבקשה תבדוק את החיבור שלך ותנסה מאוחר יותר."
-			}
-		}
-	},
-	"settings":{
-		"title":"הגדרות",
-		"username":"שם משתמש",
-		"password":"סיסמא",
-		"header":"אישורי כניסה מ minecraft.net",
-		"footer":{
-			"migratedAccount":"אם המשתמש שלך שולב עם משתמש mojang, עליך להשתמש בכתובת האימייל במקום שם המשתמש של מיינקראפט.",
-			"privacy":"הערה: אנחנו לעולם לא נשמור או נשתמש בפרטים שלך בשביל שום דבר אחר חוץ מלהחליף דמויות של מיינקראפט. פרטי החשבון שלך שמורים בבטחה בתוך הIOS."
-		}
-	},
-	"addProcess":{
-		"skinInfo":{
-			"title":"מידע על הדמות",
-			"shortTitle":"פרטי הדמות",
-			"name":"שם דמות",
-			"nameHint":"הדמות האדירה שלי",
-			"description":"תיאור",
-			"method":{
-				"title":"הוסף את הדמות...",
-				"search":"לפי חיפוש באינטרנט",
-				"pseudo":"מחשבון קיים",
-				"url":"מכתובת URL",
-				"cancel":"ביטול"
-			}
-		},
-		"urlSelect":{
-			"urlTitle":"הדבק או כתוב את כתובת URL של הדמות (חייב להיות קובץ PNG):",
-			"pseudoTitle":"כתוב את שם המשתמש של מיינקראפט כאן (תלוי באותיות רישיות):",
-			"invalidUrl":"הכתובת URL הזאת שגויה (חייב להיות קובץ PNG)."
-		},
-		"search":{
-			"select":"בחר את הדמות הזאת",
-			"searchHint":"חפש ברשת מיינקראפט...",
-			"indicator":{
-				"searchResults":"תוצאות חיפוש ל: %s",
-				"noResults":"אין תוצאות ל: %s",
-				"random":"דמויות אקראיות"
-			},
-			"error":{
-				"network":"אין אפשרות לטעון את תוצאות החיפוש. תבדוק את החיבור, ונסה מאוחר יותר."
-			}
-		},
-		"process":{
-			"title":"מעבד...",
-			"progress":{
-				"initial":"Reticulating Splines...",
-				"skin":"מוריד דמות...",
-				"preview":"מוריד תצוגה מקדימה של דמות...",
-				"database":"רושם דמות למרכז מידע...",
-				"success":"הוסף בהצלחה את הדמות! :)",
-				"fail":"נכשל :("
-			},
-			"error":{
-				"skin":"שגיעה בעת הורדת הדמות. מבטל.",
-				"preview":{
-					"title":"שגיאת רשת",
-					"message":"שגיאה בעת הורדת התצוגה המקדימה. לא היה תצודה מקדימה לדמות. להמשיך בכל זאת?",
-					"cancel":"ביטול",
-					"ok":"המשך"
-				}
-			},
-			"challenge":{
-				"title":"אימות אישור",
-				"help":"אתה צריך לענות על השאלה הזאת בגלל שאתה מנסה לגשת למשתמש mojang ממקום אחר.\nאם שכחת את הסיסמא, אתה יכול לנסות שאלה נוספת על ידי סגירת החלון ונסיון חוזר (זה אקראי).\nאם אתה לא מצליח להתחבר, בבקשה תבקר ב help.mojang.com בשביל הדרכה על איפוס השאלות.",
-				"cancel":"ביטול",
-				"continue":"המשך",
-				"hint":"ענה"
-			}
-		},
-		"next":"הבא"
-	},
-	"credits":{
-		"title":"קרדיטים",
-		"developer":"מפתח:",
-		"platform":"פלטפורמה:",
-		"translators":"מתרגמים:",
-		"thanks":"תודות מיוחדות ל:",
-		"modules":"מודולים:"
-	},
-	"buttons":{
-		"edit":"עריכה",
-		"done":"סיים",
-		"close":"סגור"
-	},
-	"editSkin":{
-		"short":"עריכה",
-		"title":"ערוך פרטי דמות"
-	},
-	"restoreDatabase":{
-		"title":"או או...",
-		"message":"אין לנו אפשרות לפתוח את הקובץ שמכיל את הדמויות שלך, מסיבה כלשהי.\nלמרבה המזל, יש גיבוי מ %s.\nהאם אתה רוצה לשחזר את זה?",
-		"no":"לא, תודה.",
-		"yes":"בוא נעשה את זה!"
-	}
+  "main":{
+    "skinList":"רשימת דמויות",
+    "addSkin":"הוסף דמות",
+    "editSettings":"ערוך הגדרות",
+    "skinDetails":{
+      "title":"פרטי דמויות",
+      "description":"תיאור",
+      "creation":"תאריך יצירה",
+      "wear":"לבש את הדמות הזאת",
+      "close":"סגור"
+    },
+    "noSelectedSkin":"לא נבחרה דמות.",
+    "search":"חפש בדמויות שלך...",
+    "tips":{
+      "wear":"טיפ: כדי ללבוש דמות, לחץ לחיצה ארוכה על הסמל שלו!"
+    },
+    "skinDelete":{
+      "title":"אשר מחיקה",
+      "message":"האם אתה באמת רוצה למחוק את ״%s\"?",
+      "cancel":"לאאאאאאאא!",
+      "okay":"בטח!"
+    },
+    "progressBar":{
+      "login":"מתחבר...",
+      "upload":"מעלה דמות...",
+      "loginFail":"התחברות נכשלה",
+      "serverFail":"Could not reach",
+      "uploadFail":"העלאה נכשלה",
+      "challengeFail":"אתגר נכשל",
+      "success":"העלאה הושלמה!"
+    },
+    "skinUpload":{
+      "confirm":{
+        "title":"החלף דמות?",
+        "message":"האם את\/ה באמת רוצה להחליף את הדמות שלך עם \"%s\"?",
+        "cancel":"לא",
+        "okay":"כן"
+      },
+      "error":{
+        "title":"שגיאה בהעלאה",
+        "login":"אין אפשרות להתחבר לminecraft.net. בבקשה תבדוק את פרטי ההתחברות שלך בהגדרות.",
+        "server":"לא יכול היה להגיע minecraft.net. האתר עשוי להיות למטה. בדוק http:\/\/help.mojang.com ונסה שוב מאוחר יותר.",
+        "upload":"לא הצלחנו להעלות את הדמות ל- minecraft.net בבקשה נסה מאוחר יותר.",
+        "challenge":"את\/ה נדרש\/ת לענות על שאלת אבטחה כדי לגשת לחשבונך מהמכשיר הזה.\nלמרבה הצער, אנחנו לא יכולים לטעון אותה. בבקשה בדוק את החיבור שלך ונסה מאוחר יותר."
+      }
+    }
+  },
+  "settings":{
+    "title":"הגדרות",
+    "username":"שם משתמש",
+    "password":"סיסמא",
+    "header":"אישורי כניסה מ minecraft.net",
+    "footer":{
+      "migratedAccount":"אם המשתמש שלך שולב עם משתמש mojang, עליך להשתמש בכתובת האימייל במקום שם המשתמש של מיינקראפט.",
+      "privacy":"הערה: אנחנו לעולם לא נשמור או נשתמש בפרטים שלך בשביל שום דבר אחר חוץ מלהחליף דמויות  המיינקראפט שלך. פרטי החשבון שלך שמורים בבטחה בתוך הIOS."
+    }
+  },
+  "addProcess":{
+    "skinInfo":{
+      "title":"מידע על הדמות",
+      "shortTitle":"פרטי הדמות",
+      "name":"שם הדמות",
+      "nameHint":"הדמות האדירה שלי",
+      "description":"תיאור",
+      "method":{
+        "title":"הוסף את הדמות...",
+        "search":"לפי חיפוש באינטרנט",
+        "pseudo":"מחשבון קיים",
+        "url":"מכתובת URL",
+        "cancel":"ביטול"
+      }
+    },
+    "urlSelect":{
+      "urlTitle":"הדבק או כתוב את כתובת הURL של הדמות (חייב להיות קובץ PNG):",
+      "pseudoTitle":"כתוב את שם המשתמש של מיינקראפט כאן (תלוי באותיות רישיות):",
+      "invalidUrl":"כתובת הURL הזאת שגויה (חייב להיות קובץ PNG)."
+    },
+    "search":{
+      "select":"בחר את הדמות הזאת",
+      "searchHint":"חפש ברשת מיינקראפט...",
+      "indicator":{
+        "searchResults":"תוצאות חיפוש ל: %s",
+        "noResults":"אין תוצאות ל: %s",
+        "random":"דמויות אקראיות"
+      },
+      "error":{
+        "network":"אין אפשרות לטעון את תוצאות החיפוש. תבדוק את החיבור, ונסה מאוחר יותר."
+      }
+    },
+    "process":{
+      "title":"מעבד...",
+      "progress":{
+        "initial":"Reticulating Splines...",
+        "skin":"מוריד דמות...",
+        "preview":"מוריד תצוגה מקדימה של דמות...",
+        "database":"רושם דמות למרכז מידע...",
+        "success":"הוסף בהצלחה את הדמות! :)",
+        "fail":"נכשל :("
+      },
+      "error":{
+        "skin":"שגיעה בעת הורדת הדמות. מבטל.",
+        "preview":{
+          "title":"שגיאת רשת",
+          "message":"שגיאה בעת הורדת התצוגה המקדימה. לא היה תצודה מקדימה לדמות. להמשיך בכל זאת?",
+          "cancel":"ביטול",
+          "ok":"המשך"
+        }
+      },
+      "challenge":{
+        "title":"אימות אישור",
+        "help":"אתה צריך לענות על השאלה הזאת בגלל שאתה מנסה לגשת למשתמש mojang ממקום אחר.\nאם שכחת את הסיסמא, אתה יכול לנסות שאלה נוספת על ידי סגירת החלון ונסיון חוזר (זה אקראי).\nאם אתה לא מצליח להתחבר, בבקשה תבקר ב help.mojang.com בשביל הדרכה על איפוס השאלות.",
+        "cancel":"ביטול",
+        "continue":"המשך",
+        "hint":"ענה"
+      }
+    },
+    "next":"הבא"
+  },
+  "credits":{
+    "title":"קרדיטים",
+    "developer":"מפתח:",
+    "platform":"פלטפורמה:",
+    "translators":"מתרגמים:",
+    "thanks":"תודות מיוחדות ל:",
+    "modules":"מודולים:"
+  },
+  "buttons":{
+    "edit":"עריכה",
+    "done":"סיים",
+    "close":"סגור"
+  },
+  "editSkin":{
+    "short":"עריכה",
+    "title":"ערוך פרטי דמות"
+  },
+  "restoreDatabase":{
+    "title":"או או...",
+    "message":"אין לנו אפשרות לפתוח את הקובץ שמכיל את הדמויות שלך, מסיבה כלשהי.\nלמרבה המזל, יש גיבוי מ %s.\nהאם אתה רוצה לשחזר את זה?",
+    "no":"לא, תודה.",
+    "yes":"בוא נעשה את זה!"
+  }
 }
