--- a/Resources/i18n/ru.json
+++ b/Resources/i18n/ru.json
@@ -25,6 +25,7 @@
       "login":"Вхожу...",
       "upload":"Загружаю скин...",
       "loginFail":"Не удалось войти",
+      "serverFail":"Не удалось достичь",
       "uploadFail":"Не удалось загрузить",
       "challengeFail":"Не удалось",
       "success":"Загрузка завершена!"
