--- a/Resources/i18n/de.json
+++ b/Resources/i18n/de.json
@@ -1,142 +1,143 @@
 {
-	"main":{
-		"skinList":"Skins-Liste",
-		"addSkin":"Ein Skin anzufügen",
-		"editSettings":"Einstellungen bearbeiten",
-		"skinDetails":{
-			"title":"Skins Einzelheiten",
-			"description":"Beschreibung",
-			"creation":"Datum der Erstellung",
-			"wear":"Dieses Skin zu tragen",
-			"close":"Schliessen"
-		},
-		"noSelectedSkin":"Keine Skin  ausgewählt.",
-		"search":"In meinen Skins suchen...",
-		"tips":{
-			"wear":"Um ein Skin zu trager, berühr und halt das Symbol !"
-		},
-		"skinDelete":{
-			"title":"Bestätigen Sie den Löschvorgang",
-			"message":"Môchten Sie wirklich \"%s\" löschen?",
-			"cancel":"Neeeeeein!",
-			"okay":"Sicher!"
-		},
-		"progressBar":{
-			"login":"Einloggen...",
-			"upload":"Hochladen Skin...",
-			"loginFail":"Fehler bei der Einloggund",
-			"uploadFail":"Hochladen fehlgeschlagen",
-			"challengeFail":"Herausforderung fehlgeschlagen",
-			"success":"Hochladen fertig!"
-		},
-		"skinUpload":{
-			"confirm":{
-				"title":"Ersetzen Skin?",
-				"message":"Wollen Sie Ihre Skin mit \"%s\" ersetzen ?",
-				"cancel":"Nein",
-				"okay":"Ja"
-			},
-			"error":{
-				"title":"Hochladen Fehler",
-				"login":"Konnte nicht auf minecraft.net einloggen. Bitte überprüfen Sie Ihr Login und Passwort in den Einstellungen.",
-				"server":"Minecraft.net konnte nicht erreicht werden. Die Website kann zerstört sein. Überprüfen Sie http:\/\/help.mojang.com und wiederholen später.",
-				"upload":"Das Skin konnte auf minecraft.net nicht hochgeladen werden. Bitte versuchen Sie es später erneut.",
-				"challenge":"Sie sind verpflichtet, eine Sichterheitsfrage zu beantworten um auf ihr Account zugreifen zu Können von diesem Gerät aus.\nBedauerlicherweise konnten wir es nicht laden. Bitte überprüfen sie ihre Verbindung und versuchen Sie es später erneut."
-			}
-		}
-	},
-	"settings":{
-		"title":"Einstellungen",
-		"username":"Benutzername",
-		"password":"Passwort",
-		"header":"Minecraft.net Anmeldeinformationen",
-		"footer":{
-			"migratedAccount":"Wenn Ihr Konto zu einem Mojang Konto migriert wurde, müssen Sie Ihre E-Mail-Adresse als Ihr Minecraft-Benutzernamen benutzen.",
-			"privacy":"Bemerkung: Wir werden nie Ihre Informationen speichern oder benutzen. Wir wechseln nur Ihres SKin. Ihren Konteinformationen sind auch in Sicherheit mit dem iOS Kaychain speichern."
-		}
-	},
-	"addProcess":{
-		"skinInfo":{
-			"title":"Skins Informationen",
-			"shortTitle":"Skins Info",
-			"name":"Skins Name",
-			"nameHint":"Mein wunderschönes Skin",
-			"description":"Beschreibung",
-			"method":{
-				"title":"Dieses Skin hinzufügen...",
-				"search":"Durch die Websuche",
-				"pseudo":"Von ein bestehender Spieler",
-				"url":"Von eine URL",
-				"cancel":"Abbrechen"
-			}
-		},
-		"urlSelect":{
-			"urlTitle":"Einfügen Sie oder tippen Sie die SkinURL (Muss ein PNG File sein):",
-			"pseudoTitle":"Tippen Sie das Minecraft Username hier (Groß-\/Kleinschreibung beachten):",
-			"invalidUrl":"Diese URL ist ungültig (Muss ein PNG-File sein)."
-		},
-		"search":{
-			"select":"Diesen Skin auswählen",
-			"searchHint":"Im MC-Netzwerk suchen...",
-			"indicator":{
-				"searchResults":"Suchergebnisse für: %s",
-				"noResults":"Keine Suchergebnisse für: %s",
-				"random":"Zufällige Skins"
-			},
-			"error":{
-				"network":"Suchergebnisse konnten nicht geladen werden. Überprüfe deine Verbindung und veruche es später erneut."
-			}
-		},
-		"process":{
-			"title":"Verarbeitung...",
-			"progress":{
-				"initial":"Reticulating Splines...",
-				"skin":"Skin wird heruntergeladen...",
-				"preview":"Skin-Vorschau wird heruntergeladen...",
-				"database":"Skin wird im Datenbank registriert...",
-				"success":"Das Skin wurde erfolgreich hinzugefügt! :)",
-				"fail":"Digital-Fehler :("
-			},
-			"error":{
-				"skin":"Fehler beim Herunterladen des Skins. Wird abgebrochen.",
-				"preview":{
-					"title":"Netzwerkfehler",
-					"message":"Fehler beim Herunterladen der Vorschau. Es wird keine Vorschau für diese Haut geben. Installation fortsetzen?",
-					"cancel":"Abbrechen",
-					"ok":"Weiter"
-				}
-			},
-			"challenge":{
-				"title":"Identitätsbestätigung",
-				"help":"Sie müssen diese Frage zu beantworten, weil Sie versuchen, auf Ihr Mojang-Konto von einem anderen Standort zuzgreifen.  Wenn Sie die Antwort vergessen haben, können Sie versuchen, durch Schließen des Fensters, eine andere Frage zu beantworten und es erneut versuchen (es ist zufällig).  Wenn Sie sich wirklich nicht erinnern können, besuchen Sie bitte help.mojang.com für Anweisungen zum Zurücksetzen Ihrer Fragen.",
-				"cancel":"Abbrechen",
-				"continue":"Weiter",
-				"hint":"Antwort"
-			}
-		},
-		"next":"Nächste"
-	},
-	"credits":{
-		"title":"Credits",
-		"developer":"Entwickler:",
-		"platform":"Plattform:",
-		"translators":"Übersetzern:",
-		"thanks":"Besonderen Dank an:",
-		"modules":"Module:"
-	},
-	"buttons":{
-		"edit":"Bearbeiten",
-		"done":"Fertig",
-		"close":"Schließen"
-	},
-	"editSkin":{
-		"short":"Bearbeiten",
-		"title":"Skin-Informationen bearbeiten"
-	},
-	"restoreDatabase":{
-		"title":"Uh oh...",
-		"message":"Aus irgendeinem Grund waren wir nicht in der Lage,um die Datei mit Ihren Skins zu öffnen.\nGlücklicherweise gibt es ein Backup von %s.\nMöchten Sie es wiederherstellen?",
-		"no":"Nein, danke.",
-		"yes":"Jetzt geht's los !"
-	}
+  "main":{
+    "skinList":"Skins-Liste",
+    "addSkin":"Ein Skin anzufügen",
+    "editSettings":"Einstellungen bearbeiten",
+    "skinDetails":{
+      "title":"Skins Einzelheiten",
+      "description":"Beschreibung",
+      "creation":"Datum der Erstellung",
+      "wear":"Dieses Skin zu tragen",
+      "close":"Schliessen"
+    },
+    "noSelectedSkin":"Keine Skin  ausgewählt.",
+    "search":"In meinen Skins suchen...",
+    "tips":{
+      "wear":"Um ein Skin zu trager, berühr und halt das Symbol !"
+    },
+    "skinDelete":{
+      "title":"Bestätigen Sie den Löschvorgang",
+      "message":"Môchten Sie wirklich \"%s\" löschen?",
+      "cancel":"Neeeeeein!",
+      "okay":"Sicher!"
+    },
+    "progressBar":{
+      "login":"Einloggen...",
+      "upload":"Hochladen Skin...",
+      "loginFail":"Fehler bei der Einloggund",
+      "serverFail":"Could not reach",
+      "uploadFail":"Hochladen fehlgeschlagen",
+      "challengeFail":"Herausforderung fehlgeschlagen",
+      "success":"Hochladen fertig!"
+    },
+    "skinUpload":{
+      "confirm":{
+        "title":"Ersetzen Skin?",
+        "message":"Wollen Sie Ihre Skin mit \"%s\" ersetzen ?",
+        "cancel":"Nein",
+        "okay":"Ja"
+      },
+      "error":{
+        "title":"Hochladen Fehler",
+        "login":"Konnte nicht auf minecraft.net einloggen. Bitte überprüfen Sie Ihr Login und Passwort in den Einstellungen.",
+        "server":"Minecraft.net konnte nicht erreicht werden. Die Website kann zerstört sein. Überprüfen Sie http:\/\/help.mojang.com und wiederholen später.",
+        "upload":"Das Skin konnte auf minecraft.net nicht hochgeladen werden. Bitte versuchen Sie es später erneut.",
+        "challenge":"Sie sind verpflichtet, eine Sichterheitsfrage zu beantworten um auf ihr Account zugreifen zu Können von diesem Gerät aus.\nBedauerlicherweise konnten wir es nicht laden. Bitte überprüfen sie ihre Verbindung und versuchen Sie es später erneut."
+      }
+    }
+  },
+  "settings":{
+    "title":"Einstellungen",
+    "username":"Benutzername",
+    "password":"Passwort",
+    "header":"Minecraft.net Anmeldeinformationen",
+    "footer":{
+      "migratedAccount":"Wenn Ihr Konto zu einem Mojang Konto migriert wurde, müssen Sie Ihre E-Mail-Adresse als Ihr Minecraft-Benutzernamen benutzen.",
+      "privacy":"Bemerkung: Wir werden nie Ihre Informationen speichern oder benutzen. Wir wechseln nur Ihres SKin. Ihren Konteinformationen sind auch in Sicherheit mit dem iOS Kaychain speichern."
+    }
+  },
+  "addProcess":{
+    "skinInfo":{
+      "title":"Skins Informationen",
+      "shortTitle":"Skins Info",
+      "name":"Skins Name",
+      "nameHint":"Mein wunderschönes Skin",
+      "description":"Beschreibung",
+      "method":{
+        "title":"Dieses Skin hinzufügen...",
+        "search":"Durch die Websuche",
+        "pseudo":"Von ein bestehender Spieler",
+        "url":"Von eine URL",
+        "cancel":"Abbrechen"
+      }
+    },
+    "urlSelect":{
+      "urlTitle":"Einfügen Sie oder tippen Sie die SkinURL (Muss ein PNG File sein):",
+      "pseudoTitle":"Tippen Sie das Minecraft Username hier (Groß-\/Kleinschreibung beachten):",
+      "invalidUrl":"Diese URL ist ungültig (Muss ein PNG-File sein)."
+    },
+    "search":{
+      "select":"Diesen Skin auswählen",
+      "searchHint":"Im MC-Netzwerk suchen...",
+      "indicator":{
+        "searchResults":"Suchergebnisse für: %s",
+        "noResults":"Keine Suchergebnisse für: %s",
+        "random":"Zufällige Skins"
+      },
+      "error":{
+        "network":"Suchergebnisse konnten nicht geladen werden. Überprüfe deine Verbindung und veruche es später erneut."
+      }
+    },
+    "process":{
+      "title":"Verarbeitung...",
+      "progress":{
+        "initial":"Reticulating Splines...",
+        "skin":"Skin wird heruntergeladen...",
+        "preview":"Skin-Vorschau wird heruntergeladen...",
+        "database":"Skin wird im Datenbank registriert...",
+        "success":"Das Skin wurde erfolgreich hinzugefügt! :)",
+        "fail":"Digital-Fehler :("
+      },
+      "error":{
+        "skin":"Fehler beim Herunterladen des Skins. Wird abgebrochen.",
+        "preview":{
+          "title":"Netzwerkfehler",
+          "message":"Fehler beim Herunterladen der Vorschau. Es wird keine Vorschau für diese Haut geben. Installation fortsetzen?",
+          "cancel":"Abbrechen",
+          "ok":"Weiter"
+        }
+      },
+      "challenge":{
+        "title":"Identitätsbestätigung",
+        "help":"Sie müssen diese Frage zu beantworten, weil Sie versuchen, auf Ihr Mojang-Konto von einem anderen Standort zuzgreifen.  Wenn Sie die Antwort vergessen haben, können Sie versuchen, durch Schließen des Fensters, eine andere Frage zu beantworten und es erneut versuchen (es ist zufällig).  Wenn Sie sich wirklich nicht erinnern können, besuchen Sie bitte help.mojang.com für Anweisungen zum Zurücksetzen Ihrer Fragen.",
+        "cancel":"Abbrechen",
+        "continue":"Weiter",
+        "hint":"Antwort"
+      }
+    },
+    "next":"Nächste"
+  },
+  "credits":{
+    "title":"Credits",
+    "developer":"Entwickler:",
+    "platform":"Plattform:",
+    "translators":"Übersetzern:",
+    "thanks":"Besonderen Dank an:",
+    "modules":"Module:"
+  },
+  "buttons":{
+    "edit":"Bearbeiten",
+    "done":"Fertig",
+    "close":"Schließen"
+  },
+  "editSkin":{
+    "short":"Bearbeiten",
+    "title":"Skin-Informationen bearbeiten"
+  },
+  "restoreDatabase":{
+    "title":"Uh oh...",
+    "message":"Aus irgendeinem Grund waren wir nicht in der Lage,um die Datei mit Ihren Skins zu öffnen.\nGlücklicherweise gibt es ein Backup von %s.\nMöchten Sie es wiederherstellen?",
+    "no":"Nein, danke.",
+    "yes":"Jetzt geht's los !"
+  }
 }
