--- a/Resources/i18n/es.json
+++ b/Resources/i18n/es.json
@@ -1,142 +1,143 @@
 {
-	"main":{
-		"skinList":"Lista de skins",
-		"addSkin":"Añadir una Skin",
-		"editSettings":"Ajustar",
-		"skinDetails":{
-			"title":"Detalles del skin",
-			"description":"Descripción",
-			"creation":"Fetcha de creación",
-			"wear":"Usar este skin",
-			"close":"Cerrar"
-		},
-		"noSelectedSkin":"No skin seleccionado.",
-		"search":"Search in your skins...",
-		"tips":{
-			"wear":"Protip: ¡Para usar este skin, toca y mantenga su icono!"
-		},
-		"skinDelete":{
-			"title":"Confirmar eliminación",
-			"message":"¿Realmente desas eliminar \"%s\"?",
-			"cancel":"¡Nooooooo!",
-			"okay":"¡Seguro!"
-		},
-		"progressBar":{
-			"login":"Conexión...",
-			"upload":"Subiendo skin...",
-			"loginFail":"Error de inicio",
-			"uploadFail":"Envío imposible",
-			"challengeFail":"Desafío fallado",
-			"success":"¡Envío completo!"
-		},
-		"skinUpload":{
-			"confirm":{
-				"title":"¿Reemplazar tu skin?",
-				"message":"¿Realmente quieres reemplazar tu skin con \"%s\"?",
-				"cancel":"No",
-				"okay":"Si"
-			},
-			"error":{
-				"title":"Error de envío",
-				"login":"Error de inicio de sesión en minecraft.net. Por favor comproba a tu nombre de usuario y contraseña.",
-				"server":"No se pudo conectar a minecraft.net. El sitio web podría no estar disponible. Comproba http:\/\/help.mojang.com y inténte de nuevo más tarde.",
-				"upload":"No se pudo enviar el skin en minecraft.net. Por favor inténte de nuevo más tarde.",
-				"challenge":"Deberá responder a una pregunta de seguridad para acceder a tu cuenta desde este dispositivo.\nDesafortunadamente, no pudimos cargarlo. Por favor, compruebe tu conexión e inténtelo de nuevo más tarde."
-			}
-		}
-	},
-	"settings":{
-		"title":"Ajustes",
-		"username":"Nombre de usario",
-		"password":"Contraseña",
-		"header":"Datos de conexión a Minecraft.net",
-		"footer":{
-			"migratedAccount":"Si tu cuenta se ha migrado a un Mojang account, tienes que utilizar tu dirección de correo electrónico en lugar de tu nombre de usuario Minecraft.",
-			"privacy":"Nota: NUNCA vamos a almacenar o utilizar cualquiera de tus datos para cualquier otra cosa que cambiar tus Minecraft skins. Los datos de tu cuenta son almacena de forma segura en el llavero de iOS."
-		}
-	},
-	"addProcess":{
-		"skinInfo":{
-			"title":"Skin información",
-			"shortTitle":"Skin info",
-			"name":"Skin nombre",
-			"nameHint":"Mi increible skin",
-			"description":"Descripción",
-			"method":{
-				"title":"Añadir este skin...",
-				"search":"Buscando en el web",
-				"pseudo":"Desde un usuario existente",
-				"url":"Desde un enlace",
-				"cancel":"Cancelar"
-			}
-		},
-		"urlSelect":{
-			"urlTitle":"Pega o escribe el enlace del skin aquí (debe ser un PNG archivo):",
-			"pseudoTitle":"Escribe el Minecraft username aquí:",
-			"invalidUrl":"Este enlace es inválida (DEBE ser un PNG archivo)."
-		},
-		"search":{
-			"select":"Seleccionar este skin",
-			"searchHint":"Buscar en MC Network...",
-			"indicator":{
-				"searchResults":"Resultados de búsqueda para: %s",
-				"noResults":"No resultados para: %s",
-				"random":"Skins aleatorios"
-			},
-			"error":{
-				"network":"No podía cargar los resultados de la búsqueda. Compruebe su conexión e inténtelo de nuevo más tarde."
-			}
-		},
-		"process":{
-			"title":"Tratamiento...",
-			"progress":{
-				"initial":"Reticulating Splines...",
-				"skin":"Cargando el skin...",
-				"preview":"Cargando la previa del skin...",
-				"database":"Registrando el skin en la base de datos...",
-				"success":"¡Añadido el skin con éxito! :)",
-				"fail":"Fail :("
-			},
-			"error":{
-				"skin":"Error descargando el skin. Abortando.",
-				"preview":{
-					"title":"Error de red",
-					"message":"Error descargando la previa. No habrá ninguna previa para este skin. ¿Seguir de todas formas?",
-					"cancel":"Cancelar",
-					"ok":"Seguir"
-				}
-			},
-			"challenge":{
-				"title":"Confirmación de la identidad",
-				"help":"Debes contestar esta pregunta, porque estás intentando acceder a tu cuenta Mojang desde un lugar diferente.\n\nSi has olvidado la respuesta, puedes intentar contestar una otra pregunta cerrando esta ventana y volviendo a intentarlo (es aleatorio).\n\nSi realmente no puedes recordar, visite help.mojang.com para obtener instrucciones sobre la reinicialización de tus preguntas.",
-				"cancel":"Cancelar",
-				"continue":"Seguir",
-				"hint":"Respuesta"
-			}
-		},
-		"next":"Siguiente"
-	},
-	"credits":{
-		"title":"Créditos",
-		"developer":"Desarrollador:",
-		"platform":"plataforma:",
-		"translators":"Traductores:",
-		"thanks":"Muchas gracias a:",
-		"modules":"Módulos:"
-	},
-	"buttons":{
-		"edit":"Editar",
-		"done":"OK",
-		"close":"Cerrar"
-	},
-	"editSkin":{
-		"short":"Editar",
-		"title":"Editar skin detalles"
-	},
-	"restoreDatabase":{
-		"title":"¡No no noooo!..",
-		"message":"No se pudo abrir el archivo que contiene sus skins, por alguna razón.\nPor suerte, hay una copia de seguridad de %s.\n¿Te gustaría restaurar?",
-		"no":"No, gracias.",
-		"yes":"Vamos!"
-	}
+  "main":{
+    "skinList":"Lista de skins",
+    "addSkin":"Añadir una Skin",
+    "editSettings":"Ajustar",
+    "skinDetails":{
+      "title":"Detalles del skin",
+      "description":"Descripción",
+      "creation":"Fetcha de creación",
+      "wear":"Usar este skin",
+      "close":"Cerrar"
+    },
+    "noSelectedSkin":"No skin seleccionado.",
+    "search":"Search in your skins...",
+    "tips":{
+      "wear":"Protip: ¡Para usar este skin, toca y mantenga su icono!"
+    },
+    "skinDelete":{
+      "title":"Confirmar eliminación",
+      "message":"¿Realmente desas eliminar \"%s\"?",
+      "cancel":"¡Nooooooo!",
+      "okay":"¡Seguro!"
+    },
+    "progressBar":{
+      "login":"Conexión...",
+      "upload":"Subiendo skin...",
+      "loginFail":"Error de inicio",
+      "serverFail":"Could not reach",
+      "uploadFail":"Envío imposible",
+      "challengeFail":"Desafío fallado",
+      "success":"¡Envío completo!"
+    },
+    "skinUpload":{
+      "confirm":{
+        "title":"¿Reemplazar tu skin?",
+        "message":"¿Realmente quieres reemplazar tu skin con \"%s\"?",
+        "cancel":"No",
+        "okay":"Si"
+      },
+      "error":{
+        "title":"Error de envío",
+        "login":"Error de inicio de sesión en minecraft.net. Por favor comproba a tu nombre de usuario y contraseña.",
+        "server":"No se pudo conectar a minecraft.net. El sitio web podría no estar disponible. Comproba http:\/\/help.mojang.com y inténte de nuevo más tarde.",
+        "upload":"No se pudo enviar el skin en minecraft.net. Por favor inténte de nuevo más tarde.",
+        "challenge":"Deberá responder a una pregunta de seguridad para acceder a tu cuenta desde este dispositivo.\nDesafortunadamente, no pudimos cargarlo. Por favor, compruebe tu conexión e inténtelo de nuevo más tarde."
+      }
+    }
+  },
+  "settings":{
+    "title":"Ajustes",
+    "username":"Nombre de usario",
+    "password":"Contraseña",
+    "header":"Datos de conexión a Minecraft.net",
+    "footer":{
+      "migratedAccount":"Si tu cuenta se ha migrado a un Mojang account, tienes que utilizar tu dirección de correo electrónico en lugar de tu nombre de usuario Minecraft.",
+      "privacy":"Nota: NUNCA vamos a almacenar o utilizar cualquiera de tus datos para cualquier otra cosa que cambiar tus Minecraft skins. Los datos de tu cuenta son almacena de forma segura en el llavero de iOS."
+    }
+  },
+  "addProcess":{
+    "skinInfo":{
+      "title":"Skin información",
+      "shortTitle":"Skin info",
+      "name":"Skin nombre",
+      "nameHint":"Mi increible skin",
+      "description":"Descripción",
+      "method":{
+        "title":"Añadir este skin...",
+        "search":"Buscando en el web",
+        "pseudo":"Desde un usuario existente",
+        "url":"Desde un enlace",
+        "cancel":"Cancelar"
+      }
+    },
+    "urlSelect":{
+      "urlTitle":"Pega o escribe el enlace del skin aquí (debe ser un PNG archivo):",
+      "pseudoTitle":"Escribe el Minecraft username aquí:",
+      "invalidUrl":"Este enlace es inválida (DEBE ser un PNG archivo)."
+    },
+    "search":{
+      "select":"Seleccionar este skin",
+      "searchHint":"Buscar en MC Network...",
+      "indicator":{
+        "searchResults":"Resultados de búsqueda para: %s",
+        "noResults":"No resultados para: %s",
+        "random":"Skins aleatorios"
+      },
+      "error":{
+        "network":"No podía cargar los resultados de la búsqueda. Compruebe su conexión e inténtelo de nuevo más tarde."
+      }
+    },
+    "process":{
+      "title":"Tratamiento...",
+      "progress":{
+        "initial":"Reticulating Splines...",
+        "skin":"Cargando el skin...",
+        "preview":"Cargando la previa del skin...",
+        "database":"Registrando el skin en la base de datos...",
+        "success":"¡Añadido el skin con éxito! :)",
+        "fail":"Fail :("
+      },
+      "error":{
+        "skin":"Error descargando el skin. Abortando.",
+        "preview":{
+          "title":"Error de red",
+          "message":"Error descargando la previa. No habrá ninguna previa para este skin. ¿Seguir de todas formas?",
+          "cancel":"Cancelar",
+          "ok":"Seguir"
+        }
+      },
+      "challenge":{
+        "title":"Confirmación de la identidad",
+        "help":"Debes contestar esta pregunta, porque estás intentando acceder a tu cuenta Mojang desde un lugar diferente.\n\nSi has olvidado la respuesta, puedes intentar contestar una otra pregunta cerrando esta ventana y volviendo a intentarlo (es aleatorio).\n\nSi realmente no puedes recordar, visite help.mojang.com para obtener instrucciones sobre la reinicialización de tus preguntas.",
+        "cancel":"Cancelar",
+        "continue":"Seguir",
+        "hint":"Respuesta"
+      }
+    },
+    "next":"Siguiente"
+  },
+  "credits":{
+    "title":"Créditos",
+    "developer":"Desarrollador:",
+    "platform":"plataforma:",
+    "translators":"Traductores:",
+    "thanks":"Muchas gracias a:",
+    "modules":"Módulos:"
+  },
+  "buttons":{
+    "edit":"Editar",
+    "done":"OK",
+    "close":"Cerrar"
+  },
+  "editSkin":{
+    "short":"Editar",
+    "title":"Editar skin detalles"
+  },
+  "restoreDatabase":{
+    "title":"¡No no noooo!..",
+    "message":"No se pudo abrir el archivo que contiene sus skins, por alguna razón.\nPor suerte, hay una copia de seguridad de %s.\n¿Te gustaría restaurar?",
+    "no":"No, gracias.",
+    "yes":"Vamos!"
+  }
 }
