--- a/Resources/i18n/pl.json
+++ b/Resources/i18n/pl.json
@@ -1,142 +1,143 @@
 {
-	"main":{
-		"skinList":"Lista skórek",
-		"addSkin":"Add a Skin",
-		"editSettings":"Zmień ustawienia",
-		"skinDetails":{
-			"title":"Szczegóły skórki",
-			"description":"Opis",
-			"creation":"Data utworzenia",
-			"wear":"Używaj tej skórki",
-			"close":"Zamknij"
-		},
-		"noSelectedSkin":"Nie wybrano skórki",
-		"search":"Search in your skins...",
-		"tips":{
-			"wear":"Protip: To wear a skin, tap and hold its icon!"
-		},
-		"skinDelete":{
-			"title":"Confirm Deletion",
-			"message":"Do you really want to delete \"%s\"?",
-			"cancel":"Nooooooo!",
-			"okay":"Sure!"
-		},
-		"progressBar":{
-			"login":"Logowanie...",
-			"upload":"Przesyłanie skórki...",
-			"loginFail":"Logowanie nie powiodło się",
-			"uploadFail":"Błąd przesyłania",
-			"challengeFail":"Challenge failed",
-			"success":"Przesyłanie zakończone!"
-		},
-		"skinUpload":{
-			"confirm":{
-				"title":"Zastąpić skórkę?",
-				"message":"Na pewno chcesz podmienić swoją skórkę na \"%s\"?",
-				"cancel":"Nie",
-				"okay":"Tak"
-			},
-			"error":{
-				"title":"Błąd",
-				"login":"Nie można zalogować się na minecraft.net. Proszę, sprawdź swój login i hasło w ustawieniach.",
-				"server":"Nie można osiągnąć połączenia z minecraft.net. Strona może być wyłączona. Sprawdź http:\/\/help.mojang.com i spróbuj ponownie później.",
-				"upload":"Nie można przesłać skórki na minecraft.net. Prosimy spróbować później.",
-				"challenge":"You are required to answer a security question to access your account from this device.\nUnfortunately, we couldn't load it. Please check your connection and try again later."
-			}
-		}
-	},
-	"settings":{
-		"title":"Ustawienia",
-		"username":"Nazwa użytkownika",
-		"password":"Hasło",
-		"header":"Poświadczenia logowania Minecraft.net",
-		"footer":{
-			"migratedAccount":"Jeśli Twoje konto zostało poddane migracji do konta Mojang, musisz użyć adresu e-mail zamiast nazwy użytkownika Minecraft!",
-			"privacy":"Zapamiętaj: nigdy nie będziemy przechowywać, lub używać żadnej z informacji, które podałeś. Ustawienia konta przechowywane są na keychain'ie w iOS."
-		}
-	},
-	"addProcess":{
-		"skinInfo":{
-			"title":"Informacje o skórce",
-			"shortTitle":"Informacje o skórce",
-			"name":"Nazwa skórki",
-			"nameHint":"Moja niesamowita skórka",
-			"description":"Opis",
-			"method":{
-				"title":"Dodaj skórkę...",
-				"search":"By searching the Web",
-				"pseudo":"Od istniejącego użytkownika",
-				"url":"Z adresu URL",
-				"cancel":"Anuluj"
-			}
-		},
-		"urlSelect":{
-			"urlTitle":"Wklej, lub wpisz tutaj adres URL skórki (musi być w pliku .png):",
-			"pseudoTitle":"Wpisz nazwę użytkownika Minecraft tutaj:",
-			"invalidUrl":"Adres URL jest nieprawidłowy (musi być w pliku .png)."
-		},
-		"search":{
-			"select":"Select this skin",
-			"searchHint":"Search on MC Network...",
-			"indicator":{
-				"searchResults":"Search Results for: %s",
-				"noResults":"No results for: %s",
-				"random":"Random Skins"
-			},
-			"error":{
-				"network":"Couldn't load your search results. Check your connexion, and retry later."
-			}
-		},
-		"process":{
-			"title":"Przetwarzanie...",
-			"progress":{
-				"initial":"Reticulating Splines...",
-				"skin":"Ściąganie skórki...",
-				"preview":"Ściąganie podglądu skórki...",
-				"database":"Rejestrowanie do bazy danych skórek...",
-				"success":"Successfully added the skin! :)",
-				"fail":"Fail :("
-			},
-			"error":{
-				"skin":"Error while downloading the skin. Aborting.",
-				"preview":{
-					"title":"Network Error",
-					"message":"Error while downloading the preview. There will be no preview for this skin. Continue anyway?",
-					"cancel":"Anuluj",
-					"ok":"Continue"
-				}
-			},
-			"challenge":{
-				"title":"Identity Confirmation",
-				"help":"You need to answer this question because you are trying to access your Mojang account from a different location.\n\nIf you forgot the answer, you can try answering another question by closing this window and trying again (it's random).\n\nIf you really can't remember, please visit help.mojang.com for instructions on resetting your questions.",
-				"cancel":"Anuluj",
-				"continue":"Continue",
-				"hint":"Answer"
-			}
-		},
-		"next":"Next"
-	},
-	"credits":{
-		"title":"Credits",
-		"developer":"Developer:",
-		"platform":"Platform:",
-		"translators":"Translators:",
-		"thanks":"Special thanks to:",
-		"modules":"Modules:"
-	},
-	"buttons":{
-		"edit":"Edit",
-		"done":"Done",
-		"close":"Zamknij"
-	},
-	"editSkin":{
-		"short":"Edit",
-		"title":"Edit Skin Info"
-	},
-	"restoreDatabase":{
-		"title":"Uh oh...",
-		"message":"We were unable to open the file containing your skins, for some reason.\nFortunately, there's a backup from %s.\nWould you like to restore it?",
-		"no":"No, thanks.",
-		"yes":"Let's do this!"
-	}
+  "main":{
+    "skinList":"Lista skórek",
+    "addSkin":"Add a Skin",
+    "editSettings":"Zmień ustawienia",
+    "skinDetails":{
+      "title":"Szczegóły skórki",
+      "description":"Opis",
+      "creation":"Data utworzenia",
+      "wear":"Używaj tej skórki",
+      "close":"Zamknij"
+    },
+    "noSelectedSkin":"Nie wybrano skórki",
+    "search":"Search in your skins...",
+    "tips":{
+      "wear":"Protip: To wear a skin, tap and hold its icon!"
+    },
+    "skinDelete":{
+      "title":"Confirm Deletion",
+      "message":"Do you really want to delete \"%s\"?",
+      "cancel":"Nooooooo!",
+      "okay":"Sure!"
+    },
+    "progressBar":{
+      "login":"Logowanie...",
+      "upload":"Przesyłanie skórki...",
+      "loginFail":"Logowanie nie powiodło się",
+      "serverFail":"Could not reach",
+      "uploadFail":"Błąd przesyłania",
+      "challengeFail":"Challenge failed",
+      "success":"Przesyłanie zakończone!"
+    },
+    "skinUpload":{
+      "confirm":{
+        "title":"Zastąpić skórkę?",
+        "message":"Na pewno chcesz podmienić swoją skórkę na \"%s\"?",
+        "cancel":"Nie",
+        "okay":"Tak"
+      },
+      "error":{
+        "title":"Błąd",
+        "login":"Nie można zalogować się na minecraft.net. Proszę, sprawdź swój login i hasło w ustawieniach.",
+        "server":"Nie można osiągnąć połączenia z minecraft.net. Strona może być wyłączona. Sprawdź http:\/\/help.mojang.com i spróbuj ponownie później.",
+        "upload":"Nie można przesłać skórki na minecraft.net. Prosimy spróbować później.",
+        "challenge":"You are required to answer a security question to access your account from this device.\nUnfortunately, we couldn't load it. Please check your connection and try again later."
+      }
+    }
+  },
+  "settings":{
+    "title":"Ustawienia",
+    "username":"Nazwa użytkownika",
+    "password":"Hasło",
+    "header":"Poświadczenia logowania Minecraft.net",
+    "footer":{
+      "migratedAccount":"Jeśli Twoje konto zostało poddane migracji do konta Mojang, musisz użyć adresu e-mail zamiast nazwy użytkownika Minecraft!",
+      "privacy":"Zapamiętaj: nigdy nie będziemy przechowywać, lub używać żadnej z informacji, które podałeś. Ustawienia konta przechowywane są na keychain'ie w iOS."
+    }
+  },
+  "addProcess":{
+    "skinInfo":{
+      "title":"Informacje o skórce",
+      "shortTitle":"Informacje o skórce",
+      "name":"Nazwa skórki",
+      "nameHint":"Moja niesamowita skórka",
+      "description":"Opis",
+      "method":{
+        "title":"Dodaj skórkę...",
+        "search":"By searching the Web",
+        "pseudo":"Od istniejącego użytkownika",
+        "url":"Z adresu URL",
+        "cancel":"Anuluj"
+      }
+    },
+    "urlSelect":{
+      "urlTitle":"Wklej, lub wpisz tutaj adres URL skórki (musi być w pliku .png):",
+      "pseudoTitle":"Wpisz nazwę użytkownika Minecraft tutaj:",
+      "invalidUrl":"Adres URL jest nieprawidłowy (musi być w pliku .png)."
+    },
+    "search":{
+      "select":"Select this skin",
+      "searchHint":"Search on MC Network...",
+      "indicator":{
+        "searchResults":"Search Results for: %s",
+        "noResults":"No results for: %s",
+        "random":"Random Skins"
+      },
+      "error":{
+        "network":"Couldn't load your search results. Check your connexion, and retry later."
+      }
+    },
+    "process":{
+      "title":"Przetwarzanie...",
+      "progress":{
+        "initial":"Reticulating Splines...",
+        "skin":"Ściąganie skórki...",
+        "preview":"Ściąganie podglądu skórki...",
+        "database":"Rejestrowanie do bazy danych skórek...",
+        "success":"Successfully added the skin! :)",
+        "fail":"Fail :("
+      },
+      "error":{
+        "skin":"Error while downloading the skin. Aborting.",
+        "preview":{
+          "title":"Network Error",
+          "message":"Error while downloading the preview. There will be no preview for this skin. Continue anyway?",
+          "cancel":"Anuluj",
+          "ok":"Continue"
+        }
+      },
+      "challenge":{
+        "title":"Identity Confirmation",
+        "help":"You need to answer this question because you are trying to access your Mojang account from a different location.\n\nIf you forgot the answer, you can try answering another question by closing this window and trying again (it's random).\n\nIf you really can't remember, please visit help.mojang.com for instructions on resetting your questions.",
+        "cancel":"Anuluj",
+        "continue":"Continue",
+        "hint":"Answer"
+      }
+    },
+    "next":"Next"
+  },
+  "credits":{
+    "title":"Credits",
+    "developer":"Developer:",
+    "platform":"Platform:",
+    "translators":"Translators:",
+    "thanks":"Special thanks to:",
+    "modules":"Modules:"
+  },
+  "buttons":{
+    "edit":"Edit",
+    "done":"Done",
+    "close":"Zamknij"
+  },
+  "editSkin":{
+    "short":"Edit",
+    "title":"Edit Skin Info"
+  },
+  "restoreDatabase":{
+    "title":"Uh oh...",
+    "message":"We were unable to open the file containing your skins, for some reason.\nFortunately, there's a backup from %s.\nWould you like to restore it?",
+    "no":"No, thanks.",
+    "yes":"Let's do this!"
+  }
 }
